[package]
name = "elevation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
gdal = { version = "0.16.0", features = ["bindgen"] }
geo = "0.28.0"
geo-types = "0.7.13"
geojson = "0.24.1"
utm = "0.1.6"
poloto = "19.1.2"
tagu = "0.1.6"
